--- a/LampungGuide/app/src/main/res/layout/fragment_booking.xml
+++ b/LampungGuide/app/src/main/res/layout/fragment_booking.xml
@@ -6,6 +6,17 @@
     tools:context=".BookingFragment"
     android:background="@color/purple_500">
 
-    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="223dp"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/bgbooking1" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="200dp"
+        android:src="@drawable/bg_rounded_top" />
 
 </FrameLayout>
