--- a/LampungGuide/app/src/main/res/layout/fragment_booking.xml
+++ b/LampungGuide/app/src/main/res/layout/fragment_booking.xml
@@ -18,5 +18,33 @@
         android:layout_gravity="bottom"
         android:layout_marginTop="200dp"
         android:src="@drawable/bg_rounded_top" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <ImageView
+                    android:id="@+id/booking1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/framebooking1"
+                    android:background="?attr/selectableItemBackgroundBorderless"/>
+
+            </LinearLayout>
 
 </FrameLayout>
