--- a/LampungGuide/app/src/main/res/layout/fragment_booking.xml
+++ b/LampungGuide/app/src/main/res/layout/fragment_booking.xml
@@ -44,7 +44,8 @@
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/framebooking1"
                     android:background="?attr/selectableItemBackgroundBorderless"/>
-
             </LinearLayout>
+            
+         </androidx.cardview.widget.CardView>
 
 </FrameLayout>
